kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: todo.local
      http:
        paths:
          - path: /tasks(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 8000

          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: todo-frontend
                port:
                  number: 80
